--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <hr class='section-break' />
                 <main id="main-content" class='content-section'>
                     <div>
- 						<h1>Portfolio</h1>
+ 						<h1 class="main-heading">Portfolio</h1>
                         <section id='websites'>
                             <h2 class='content-heading'>Websites</h2>
                             <ul class='tile-container'>
