--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
                         		<h2 class='name p-name'>Steven Willets</h2>
 	                        	<h3 class='position p-job-title'>Front-End Web Developer</h3>
 	                        	<ul class='contact-info'>
-	                        		<li>
-	                        			<span class='contact-address p-adr'> 
+	                        		<li class='contact-address'>
+	                        			<span class='p-adr'> 
+                                            <i class="fas fa-map-marker-alt"></i>
 	                        				<span class='p-street-address'>289 Parmelee Hill Rd</span>
 	                        				<span class='p-locality'>Durham</span>
 	                        				<span class='p-region'>CT</span> 
 	                        				<span class='p-postal-code'>06422</span>
 	                    				</span>
 	                        		</li>
-	                        		<li>
-	                        			<a class='contact-phone p-tel' href='tel:+12036504590'>(203) 650-4590</a>
+	                        		<li class='contact-phone'>
+	                        			<a class='p-tel' href='tel:+12036504590'><i class="fas fa-phone"></i> <span>(203) 650-4590</span></a>
 	                        		</li>
-	                        		<li>
-	                        			<a class='contact-email u-email' href='mailto:stevenawillets@gmail.com'>stevenawillets@gmail.com</a>
+	                        		<li class='contact-email'>
+	                        			<a class='u-email' href='mailto:stevenawillets@gmail.com'><i class="fas fa-envelope"></i> <span>stevenawillets@gmail.com</span></a>
 	                        		</li>
 	                        	</ul>
 	                        	<p class='resume'>
