--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
                 <div id="side-content" class='content-section'>
                     <section id="contact-info">
                         <article id='business-card' class='h-card'>
-                        	<img class='photo u-photo' src='images/steven-willets.png' alt='Steven Willets'/>
-                        	<div class='card-info'>
+                            <div class='card-photo'>
+                                <img class='u-photo' src='images/steven-willets.png' alt='Steven Willets' />
+                            </div>
+                            <div class='card-info'>
                         		<h2 class='name p-name'>Steven Willets</h2>
 	                        	<h3 class='position p-job-title'>Front-End Web Developer</h3>
 	                        	<ul class='contact-info'>
@@ -46,6 +48,7 @@
 	                        		</li>
 	                        	</ul>
 	                        	<p class='resume'>
+                                    <i class="fas fa-file-alt"></i>
 	                        		<span>View my</span>
 	                        		<a href='resume'>r&eacute;sum&eacute;</a>
 	                        	</p>
