added keyboard support

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <section id='websites'>
                             <h2 class='content-heading'>Websites</h2>
                             <ul class='tile-container'>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/beta-ticketliquidator-thumbnail.png" alt='Beta TicketLiquidator' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -81,7 +81,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/zeromarkup-thumbnail.png" alt='ZeroMarkup' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -99,7 +99,7 @@
 	                                	</div>
                                 	</article>
                                 </li>                                
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/newyorktheatertickets-thumbnail.png" alt='NewYorkTheaterTickets' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'><img src="images/newyorktheatertickets.png" alt='NewYorkTheaterTickets' /></div>
@@ -115,7 +115,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/revamp-thumbnail.png" alt='CMS Template Revamp' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -139,7 +139,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/rad-tickets-thumbnail.png" alt='Rad.Tickets' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'><img src="images/rad-tickets.png" alt='Rad.Tickets' /></div>
@@ -156,7 +156,7 @@
                                 	</article>
                                 </li>
 
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/tickets-ezevent-thumbnail.png" alt='EzEvent Tickets' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -174,7 +174,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/wsj-tickets-thumbnail.png" alt='Wall Street Journal Tickets' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -192,7 +192,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/opentable-tickets-thumbnail.png" alt='OpenTable Ticket Site Demo' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -210,7 +210,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/brianwilson-thumbnail.png" alt='Brian Wilson Ticket Site Demo' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -228,7 +228,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/corporate-ticketnetwork-thumbnail.png" alt='TicketNetwork Corporate Site' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -252,7 +252,7 @@
                         <section id='javascript'>
                         	<h2 class='content-heading'>JavaScript</h2>
                         	<ul class='tile-container'>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/filters-thumbnail.png" alt='Event Results with Filters' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -276,7 +276,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/cards-thumbnail.png" alt='Event Results as Cards' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -297,7 +297,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/calendar-thumbnail.png" alt='Event Results Mapped to Calendar' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -318,7 +318,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li class='tile inactive'>
+                                <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/widget-thumbnail.png" alt='Affiliate Search Widget Builder' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
