--- a/index.html
+++ b/index.html
@@ -319,17 +319,17 @@
                                 	</article>
                                 </li>
                                 <li tabindex="1" class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/widget-thumbnail.png" alt='Affiliate Search Widget Builder' />
+                                	<img class='tile-thumbnail' src="images/widget-thumbnail.png" alt='Search Widget Builder' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
-                                            <img src="images/widget.png" alt='Affiliate Search Widget Builder' />
+                                            <img src="images/widget.png" alt='Search Widget Builder' />
                                         </div>
 	                                	<div class='project-info project-content'>
-	                                		<h3 class='project-title'>Affiliate Search Widget Builder</h3>
+	                                		<h3 class='project-title'>Search Widget Builder</h3>
                                 			<p class='project-date'>2016</p>
                                             <div class='project-desc'>
                                                 <p>
-                                                    One of my first intensive JavaScript project, I was tasked with updating an affiliate tool for our titular website.  This required both updating the HTML and JS of the builder and the code for the widget itself.
+                                                    One half of my first intensive JavaScript project, I was tasked with updating the affiliate tools for our titular website.  This required both updating the HTML and JS of the builder and the code for the widget itself.
                                                 </p>
                                                 <p>
                                                     The original version of the builder page was written using tables for layout and the JS was written in vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
@@ -342,6 +342,30 @@
 	                                	</div>
                                 	</article>
                                 </li>
+                                <li tabindex="1" class='tile inactive'>
+                                	<img class='tile-thumbnail' src="images/plugin-thumbnail.png" alt='Events Plugin Builder' />
+                                	<article class='tile-content'>
+	                                	<div class='project-image project-content'>
+                                            <img src="images/plugin.png" alt='Events Plugin Builder' />
+                                        </div>
+	                                	<div class='project-info project-content'>
+	                                		<h3 class='project-title'>Events Plugin Builder</h3>
+                                			<p class='project-date'>2016</p>
+                                            <div class='project-desc'>
+                                                <p>
+                                                    One half of my first intensive JavaScript project, I was tasked with updating the affiliate tools for our titular website.  This required both updating the HTML and JS of the builder and the code for the widget itself.
+                                                </p>
+                                                <p>
+                                                    The original version of the builder page was written using tables for layout and the JS was written in vanilla JS with no consideration made for the possibility of adding or removing affiliate networks to the tool.
+                                                </p>
+                                                <p>
+                                                    Rather than perpetuate the existing mess by tacking onto it, I rewrote the HTML and JS to be more streamlined and more easy to update in the future.
+                                                </p>
+                                            </div>
+	                                		<a class='tile-link btn' target='_blank' href='https://jsfiddle.net/steven_willets/m5vxyc9g/'>View in JSFiddle</a>
+	                                	</div>
+                                	</article>
+                                </li>								
                         	</ul>
                         </section>
                     </div>
