--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                 	</article>
                                 </li>
                                 <li tabindex="1" class='tile inactive'>
-                                	<img class='tile-thumbnail' src="images/plugin.png" alt='Events Plugin Builder' />
+                                	<img class='tile-thumbnail' src="images/plugin-thumbnail.png" alt='Events Plugin Builder' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
                                             <img src="images/plugin.png" alt='Events Plugin Builder' />
