--- a/index.html
+++ b/index.html
@@ -98,7 +98,25 @@
 	                                		<a class='tile-link btn' target='_blank' href='https://zeromarkup.com'>View Site</a>
 	                                	</div>
                                 	</article>
-                                </li>                                
+                                </li>
+                                <li tabindex="1" class='tile inactive'>
+                                    <img class='tile-thumbnail' src="images/cityticketsonline-thumbnail.png" alt='CityTicketsOnline' />
+                                    <article class='tile-content'>
+                                        <div class='project-image project-content'>
+                                            <img src="images/cityticketsonline.png" alt='CityTicketsOnline' />
+                                        </div>
+                                        <div class='project-info project-content'>
+                                            <h3 class='project-title'>CityTicketsOnline Venue Sites</h3>
+                                            <p class='project-date'>2018</p>
+                                            <div class='project-desc'>
+                                                <p>
+
+                                                </p>
+                                            </div>
+                                            <a class='tile-link btn' target='_blank' href='https://newark.showsearch.com'>View Site</a>
+                                        </div>
+                                    </article>
+                                </li> 
                                 <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/newyorktheatertickets-thumbnail.png" alt='NewYorkTheaterTickets' />
                                 	<article class='tile-content'>
