--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
                                 	</article>
                                 </li>
                                 <li tabindex="1" class='tile inactive'>
-                                    <img class='tile-thumbnail' src="images/cityticketsonline-thumbnail.png" alt='CityTicketsOnline' />
+                                    <img class='tile-thumbnail' src="images/centernewark.png" alt='CenterNewark' />
                                     <article class='tile-content'>
                                         <div class='project-image project-content'>
-                                            <img src="images/cityticketsonline.png" alt='CityTicketsOnline' />
+                                            <img src="images/centernewark.png" alt='CenterNewark' />
                                         </div>
                                         <div class='project-info project-content'>
-                                            <h3 class='project-title'>CityTicketsOnline Venue Sites</h3>
+                                            <h3 class='project-title'>CenterNewark</h3>
                                             <p class='project-date'>2018</p>
                                             <div class='project-desc'>
                                                 <p>
 
                                                 </p>
                                             </div>
-                                            <a class='tile-link btn' target='_blank' href='https://newark.showsearch.com'>View Site</a>
+                                            <a class='tile-link btn' target='_blank' href='https://www.centernewark.org'>View Site</a>
                                         </div>
                                     </article>
                                 </li> 
