--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                             <a class='tile-link btn' target='_blank' href='https://www.centernewark.org'>View Site</a>
                                         </div>
                                     </article>
-                                </li> 
+                                </li>
                                 <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/newyorktheatertickets-thumbnail.png" alt='NewYorkTheaterTickets' />
                                 	<article class='tile-content'>
@@ -126,7 +126,7 @@
                                 			<p class='project-date'>2017</p>
                                             <div class='project-desc'>
                                                 <p>
-                                                    The CEO requested that I create a site that replicated the look of the <a target='_blank' href='https://www.broadway.com/'>official Broadway site</a>.
+
                                                 </p>
                                             </div>
 	                                		<a class='tile-link btn' target='_blank' href='http://newyorktheatertickets.center'>View Site</a>
@@ -173,7 +173,6 @@
 	                                	</div>
                                 	</article>
                                 </li>
-
                                 <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/tickets-ezevent-thumbnail.png" alt='EzEvent Tickets' />
                                 	<article class='tile-content'>
@@ -228,7 +227,7 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li tabindex="1" class='tile inactive'>
+                                <!--<li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/brianwilson-thumbnail.png" alt='Brian Wilson Ticket Site Demo' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -245,7 +244,7 @@
 	                                		<a class='tile-link btn' target='_blank' href='http://brianwilson.showsearch.com'>View Site</a>
 	                                	</div>
                                 	</article>
-                                </li>
+                                </li>-->
                                 <li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/corporate-ticketnetwork-thumbnail.png" alt='TicketNetwork Corporate Site' />
                                 	<article class='tile-content'>
