--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 	</article>
                                 </li>
                                 <li tabindex="1" class='tile inactive'>
-                                    <img class='tile-thumbnail' src="images/centernewark.png" alt='CenterNewark' />
+                                    <img class='tile-thumbnail' src="images/centernewark-thumbnail.png" alt='CenterNewark' />
                                     <article class='tile-content'>
                                         <div class='project-image project-content'>
                                             <img src="images/centernewark.png" alt='CenterNewark' />
