--- a/index.html
+++ b/index.html
@@ -176,6 +176,22 @@
                                 	</article>
                                 </li>
                                 <li tabindex="1" class='tile inactive'>
+                                    <img class='tile-thumbnail' src="images/timeout-thumbnail.png" alt='TicketOffers.TimeOut.com' />
+                                    <article class='tile-content'>
+                                        <div class='project-image project-content'><img src="images/timeout.png" alt='TicketOffers.TimeOut.com' /></div>
+                                        <div class='project-info project-content'>
+                                            <h3 class='project-title'>TimeOut.com Black Friday Sales</h3>
+                                            <p class='project-date'>2017</p>
+                                            <div class='project-desc'>
+                                                <p>
+
+                                                </p>
+                                            </div>
+                                            <a class='tile-link btn' target='_blank' href='ticketoffers.timeout.com'>View Site</a>
+                                        </div>
+                                    </article>
+                                </li>
+                                <li tabindex="1" class='tile inactive'>
                                     <img class='tile-thumbnail' src="images/rad-tickets-thumbnail.png" alt='Rad.Tickets' />
                                     <article class='tile-content'>
                                         <div class='project-image project-content'><img src="images/rad-tickets.png" alt='Rad.Tickets' /></div>
