--- a/index.html
+++ b/index.html
@@ -225,7 +225,24 @@
 	                                	</div>
                                 	</article>
                                 </li>
-                                <li tabindex="1" class='tile inactive'>
+                                <!--<li tabindex="1" class='tile inactive'>
+                                	<img class='tile-thumbnail' src="images/onbroadway-thumbnail.png" alt='OnBroadway' />
+                                	<article class='tile-content'>
+	                                	<div class='project-image project-content'>
+                                            <img src="images/onbroadway.png" alt='OnBroadway' />
+                                        </div>
+	                                	<div class='project-info project-content'>
+	                                		<h3 class='project-title'>OnBroadway</h3>
+                                			<p class='project-date'>2017</p>
+                                            <div class='project-desc'>
+                                                <p>
+                                                </p>
+                                            </div>
+	                                		<a class='tile-link btn' target='_blank' href='http://onbroadway.com'>View Site</a>
+	                                	</div>
+                                	</article>
+                                </li>-->
+                                <!--<li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/opentable-tickets-thumbnail.png" alt='OpenTable Ticket Site Demo' />
                                 	<article class='tile-content'>
 	                                	<div class='project-image project-content'>
@@ -242,7 +259,7 @@
 	                                		<a class='tile-link btn' target='_blank' href='http://opentable.showsearch.com'>View Site</a>
 	                                	</div>
                                 	</article>
-                                </li>
+                                </li>-->
                                 <!--<li tabindex="1" class='tile inactive'>
                                 	<img class='tile-thumbnail' src="images/brianwilson-thumbnail.png" alt='Brian Wilson Ticket Site Demo' />
                                 	<article class='tile-content'>
