--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                                             <p class='project-date'>2017</p>
                                             <div class='project-desc'>
                                                 <p>
-                                                    Our CTO commissioned this site with the intention that it be run by our engineering department. The idea was to have a friendly competition with the business side of the company that runs our internal sites.
+                                                    
                                                 </p>
                                             </div>
-                                            <a class='tile-link btn' target='_blank' href='https://www.rad.tickets/concerts'>View Site</a>
+                                            <a class='tile-link btn' target='_blank' href='https://octane.rad.tickets'>View Site</a>
                                         </div>
                                     </article>
                                 </li>
