--- a/index.html
+++ b/index.html
@@ -18,12 +18,41 @@
         <header class="section-wrapper">
             <div class="section-container">
                 <nav>
-                    <ul class="menu">
-                        <li class="menu-item"><a class="menu-link" href="index.html"><i class="fas fa-book"></i> <span>Portfolio</span></a></li>
-                        <li class="menu-item"><a class="menu-link" href="resume.html"><i class="fas fa-file-alt"></i> <span>R&eacute;sum&eacute;</span></a></li>
-                        <li class="menu-item"><a class="menu-link" href="about.html"><i class="fas fa-user-circle"></i> <span>About Me</span></a></li>
-                        <li class="menu-item"><a class="menu-link u-email" href="mailto:stevenawillets@gmail.com"><i class="fas fa-envelope"></i> <span>stevenawillets@gmail.com</span></a></li>
-                        <li class="menu-item"><a class="menu-link p-tel" href="tel:+12036504590"><i class="fas fa-phone"></i> <span>(203) 650-4590</span></a></li>
+                    <ul class="menu top-level">
+                        <li class="menu-item top-level">
+                            <a id="menu-toggle" class="menu-link" href="#"><i class="fa fa-bars"></i></a>
+                            <ul id="sub-menu" class="menu">
+                                <li class="menu-item">
+                                    <a class="menu-link" href="index.html">
+                                        <i class="fas fa-book"></i>
+                                        <span>Portfolio</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a class="menu-link" href="resume.html">
+                                        <i class="fas fa-file-alt"></i>
+                                        <span>R&eacute;sum&eacute;</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a class="menu-link" href="about.html">
+                                        <i class="fas fa-user-circle"></i>
+                                        <span>About Me</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        <li class="menu-item top-level">
+                            <a class="menu-link u-email" href="mailto:stevenawillets@gmail.com">
+                                <i class="fas fa-envelope"></i>
+                                <span>stevenawillets@gmail.com</span>
+                            </a>
+                        </li>
+                        <li class="menu-item top-level">
+                            <a class="menu-link p-tel" href="tel:+12036504590">
+                                <i class="fas fa-phone"></i>
+                                <span>(203) 650-4590</span>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
