--- a/index.html
+++ b/index.html
@@ -17,79 +17,19 @@
     <div id="code-portfolio" class="page-container">
         <header class="section-wrapper">
             <div class="section-container">
-                <nav>
-                    <ul class="menu top-level">
-                        <li class="menu-item top-level">
-                            <a id="menu-toggle" class="menu-link" href="#"><i class="fa fa-bars"></i></a>
-                            <ul id="sub-menu" class="menu">
-                                <li class="menu-item">
-                                    <a class="menu-link" href="index.html">
-                                        <i class="fas fa-book"></i>
-                                        <span>Portfolio</span>
-                                    </a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="menu-link" href="resume.html">
-                                        <i class="fas fa-file-alt"></i>
-                                        <span>R&eacute;sum&eacute;</span>
-                                    </a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="menu-link" href="about.html">
-                                        <i class="fas fa-user-circle"></i>
-                                        <span>About Me</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        <li class="menu-item top-level">
-                            <a class="menu-link u-email" href="mailto:stevenawillets@gmail.com">
-                                <i class="fas fa-envelope"></i>
-                                <span>stevenawillets@gmail.com</span>
-                            </a>
-                        </li>
-                        <li class="menu-item top-level">
-                            <a class="menu-link p-tel" href="tel:+12036504590">
-                                <i class="fas fa-phone"></i>
-                                <span>(203) 650-4590</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </header>
         <div id="content-wrapper" class="section-wrapper">
             <div id="content-container" class="section-container cf">
                 <div id="side-content" class="content-section">
-                    <section id="contact-info">
-                        <article id="business-card" class="h-card">
+                    <section id="business-card">
+                        <article class="h-card">
                             <div class="card-photo">
                                 <img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
                             </div>
                             <div class="card-info">
                         		<h2 class="name p-name">Steven Willets</h2>
 	                        	<h3 class="position p-job-title">Front-End Web Developer</h3>
-	                        	<!--<ul class="contact-info">
-	                        		<li class="contact-address">
-	                        			<span class="p-adr"> 
-                                            <i class="fas fa-map-marker-alt"></i>
-	                        				<span class="p-street-address">289 Parmelee Hill Rd</span>
-	                        				<span class="p-locality">Durham</span>
-	                        				<span class="p-region">CT</span> 
-	                        				<span class="p-postal-code">06422</span>
-	                    				</span>
-	                        		</li>
-	                        		<li class="contact-phone">
-	                        			<a class="p-tel" href="tel:+12036504590"><i class="fas fa-phone"></i> <span>(203) 650-4590</span></a>
-	                        		</li>
-	                        		<li class="contact-email">
-	                        			<a class="u-email" href="mailto:stevenawillets@gmail.com"><i class="fas fa-envelope"></i> <span>stevenawillets@gmail.com</span></a>
-	                        		</li>
-	                        	</ul>
-	                        	<p class="resume">
-                                    <i class="fas fa-file-alt"></i>
-	                        		<span>View my</span>
-	                        		<a href="resume">r&eacute;sum&eacute;</a>
-	                        	</p>-->
                         	</div>
                         </article>
                     </section>
@@ -462,6 +402,29 @@
         </div>
         <footer class="section-wrapper">
             <div class="section-container">
+				<ul class='contact-info'>
+					<li class="contact-item">
+						<span class="p-adr"> 
+							<i class="fas fa-map-marker-alt"></i>
+							<span class="p-street-address">289 Parmelee Hill Rd</span>
+							<span class="p-locality">Durham</span>
+							<span class="p-region">CT</span> 
+							<span class="p-postal-code">06422</span>
+						</span>
+					</li>
+					<li class="contact-item">
+						<a class="contact-link u-email" href="mailto:stevenawillets@gmail.com">
+							<i class="fas fa-envelope"></i>
+							<span>stevenawillets@gmail.com</span>
+						</a>
+					</li>
+					<li class="contact-item">
+						<a class="contact-link p-tel" href="tel:+12036504590">
+							<i class="fas fa-phone"></i>
+							<span>(203) 650-4590</span>
+						</a>
+					</li>
+				</ul>
             </div>
         </footer>
 		<div id="overlay"></div>
