--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
         <footer class="section-wrapper">
             <div class="section-container">
-				<ul class='contact-info'>
+				<ul class='contact-info content-section'>
 					<li class="contact-item">
 						<span class="p-adr"> 
 							<i class="fas fa-map-marker-alt"></i>
