--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 							<li tabindex="1" class="tile inactive">
 								<img class="tile-thumbnail" src="images/newyorktheatertickets-thumbnail.png" alt="NewYorkTheaterTickets" />
 								<article class="tile-content">
-									<div class="project-image project-content"><img src="images/newyorktheatertickets.png" alt="NewYorkTheaterTickets" /></div>
+									<div class="project-image project-content">
+										<img src="images/newyorktheatertickets.png" alt="NewYorkTheaterTickets" />
+									</div>
 									<div class="project-info  project-content">
 										<h3 class="project-title">NewYorkTheaterTickets</h3>
 										<p class="project-date">2017</p>
@@ -150,7 +152,9 @@
 							<li tabindex="1" class="tile inactive">
 								<img class="tile-thumbnail" src="images/rad-tickets-thumbnail.png" alt="Rad.Tickets" />
 								<article class="tile-content">
-									<div class="project-image project-content"><img src="images/rad-tickets.png" alt="Rad.Tickets" /></div>
+									<div class="project-image project-content">
+										<img src="images/rad-tickets.png" alt="Rad.Tickets" />
+									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Rad.Tickets</h3>
 										<p class="project-date">2017</p>
@@ -160,22 +164,6 @@
 											</p>
 										</div>
 										<a class="tile-link btn" target="_blank" href="https://octane.rad.tickets">View Site</a>
-									</div>
-								</article>
-							</li>
-							<li tabindex="1" class="tile inactive">
-								<img class="tile-thumbnail" src="images/timeout-thumbnail.png" alt="TicketOffers.TimeOut.com" />
-								<article class="tile-content">
-									<div class="project-image project-content"><img src="images/timeout.png" alt="TicketOffers.TimeOut.com" /></div>
-									<div class="project-info project-content">
-										<h3 class="project-title">TimeOut.com Black Friday Sales</h3>
-										<p class="project-date">2017</p>
-										<div class="project-desc">
-											<p>
-
-											</p>
-										</div>
-										<a class="tile-link btn" target="_blank" href="ticketoffers.timeout.com">View Site</a>
 									</div>
 								</article>
 							</li>
@@ -197,7 +185,7 @@
 									</div>
 								</article>
 							</li>
-							<!--<li tabindex="1" class="tile inactive">
+							<li tabindex="1" class="tile inactive">
 								<img class="tile-thumbnail" src="images/onbroadway-thumbnail.png" alt="OnBroadway" />
 								<article class="tile-content">
 									<div class="project-image project-content">
@@ -213,7 +201,23 @@
 										<a class="tile-link btn" target="_blank" href="http://onbroadway.com">View Site</a>
 									</div>
 								</article>
-							</li>-->
+							</li>
+							<!--<li tabindex="1" class="tile inactive">
+								<img class="tile-thumbnail" src="images/timeout-thumbnail.png" alt="TicketOffers.TimeOut.com" />
+								<article class="tile-content">
+									<div class="project-image project-content"><img src="images/timeout.png" alt="TicketOffers.TimeOut.com" /></div>
+									<div class="project-info project-content">
+										<h3 class="project-title">TimeOut.com Black Friday Sales</h3>
+										<p class="project-date">2017</p>
+										<div class="project-desc">
+											<p>
+
+											</p>
+										</div>
+										<a class="tile-link btn" target="_blank" href="http://ticketoffers.timeout.com">View Site</a>
+									</div>
+								</article>
+							</li>-->							
 							<!--<li tabindex="1" class="tile inactive">
 								<img class="tile-thumbnail" src="images/opentable-tickets-thumbnail.png" alt="OpenTable Ticket Site Demo" />
 								<article class="tile-content">
@@ -278,7 +282,7 @@
 								<img class="tile-thumbnail" src="images/filters-thumbnail.png" alt="Event Results with Filters" />
 								<article class="tile-content">
 									<div class="project-image project-content">
-										<img class="project-image" src="images/filters.png" alt="Event Results with Filters" />
+										<img src="images/filters.png" alt="Event Results with Filters" />
 									</div>
 									<div class="project-info project-content">
 										<h3 class="project-title">Event Results with Filters</h3>
