updated js + css

--- a/index.html
+++ b/index.html
@@ -15,19 +15,43 @@
 
 <body>
     <div id="code-portfolio" class="page-container">
-		<header class="section-wrapper">
+        <header>
+            <a id="about-link" class="header-link" href="#">
+                <span>About</span>
+                <i class="fa fa-angle-right"></i>
+            </a>
+            <a id="contact-link" class="header-link" href="#">
+                <i class="fa fa-angle-left"></i>
+                <span>Contact</span>
+            </a>
+        </header>
+        <div id="about" class="side-bar">
+            <a class="close-side" href="#"><i class="fa fa-angle-left"></i></a>
+            <section>
+                <h3 class="side-heading">About Me</h3>
+                <p></p>
+            </section>
+        </div>
+        <div id="contact" class="side-bar">
+            <a class="close-side" href="#"><i class="fa fa-angle-right"></i></a>
+            <section>
+                <h3 class="side-heading">Contact Me</h3>
+                <p></p>
+            </section>
+        </div>
+        <div id="business-card" class="section-wrapper">
             <div class="section-container">
-				<section id="business-card" class="h-card content-section">
-					<div class="card-photo">
-						<img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
-					</div>
-					<div class="card-info">
-						<h2 class="name p-name">Steven Willets</h2>
-						<h3 class="position p-job-title">Front-End Web Developer</h3>
-					</div>
-				</section>
-			</div>
-		</header>
+                <section class="h-card content-section">
+                    <div class="card-photo">
+                        <img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
+                    </div>
+                    <div class="card-info">
+                        <h2 class="name p-name">Steven Willets</h2>
+                        <h3 class="position p-job-title">Front-End Web Developer</h3>
+                    </div>
+                </section>
+            </div>
+        </div>
         <div id="main-content" class="section-wrapper">
             <div class="section-container">
                 <main class="content-section">
